--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: ruby
 gemfile:
-   - test/support/Gemfile
+   - test/support/chef-10.gemfile
+   - test/support/chef-11.gemfile
 rvm:
   - 1.9.3
   - 2.0.0
-script:
-  - bundle exec rake knife
-  - bundle exec rake foodcritic
+script: "bundle exec rake"
