--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,5 +1,6 @@
----
 driver:
+  require_chef_omnibus: <%= ENV.fetch("CHEF_VERSION", "latest") %>
+  ssh_key: <%= File.expand_path("./test/support/keys/vagrant") %>
   name: vagrant
 
 provisioner:
@@ -7,15 +8,23 @@ provisioner:
 
 platforms:
   - name: debian-7.4
+    run_list:
+      - recipe[apt]
+  - name: ubuntu-12.04
+    run_list:
+      - recipe[apt]
+  - name: centos-6.5
+    run_list:
+      - recipe[yum-epel]
+  - name: fedora-20
 
 suites:
   - name: default
     run_list:
-      - recipe[monit::default]
-    attributes:
+      - recipe[monit]
   - name: source
     run_list:
-      - recipe[monit::install_source]
+      - recipe[monit]
     attributes:
       monit:
         source_install: true
