update CI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: ruby
+bundler_args: --without integration
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.1
-script: bundle exec rake
+- 1.9.3
+- 2.0.0
+- 2.1.2
+script:
+- bundle exec rake rubocop
+- bundle exec rake foodcritic
+- bundle exec rake chefspec
+- bundle exec rake kitchen:all
 env:
   matrix:
   - CHEF_VERSION: "10.30"
