--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,6 +13,9 @@ platforms:
   - name: ubuntu-12.04
     run_list:
       - recipe[apt]
+  - name: ubuntu-14.04
+    run_list:
+      - recipe[apt]
   - name: centos-6.5
     run_list:
       - recipe[yum-epel]
