--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
-bundler_args: --without integration
+bundler_args: --jobs 4 --retry 3 --without integration
 rvm:
-- 1.9.3
-- 2.0.0
-- 2.1.2
+- 2.0
+- 2.1
+- 2.2
 script:
 - bundle exec rake rubocop
 - bundle exec rake foodcritic
@@ -11,5 +11,10 @@ script:
 - bundle exec rake kitchen:all
 env:
   matrix:
-  - CHEF_VERSION: "10.30"
-  - CHEF_VERSION: "11.10"
+  - CHEF_VERSION: "11.18.6"
+  - CHEF_VERSION: "12.0.0"
+  - CHEF_VERSION: "12.1.0"
+  - CHEF_VERSION: "12.2.0"
+  - CHEF_VERSION: "12.3.0"
+sudo: false
+cache: bundler
