--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,10 @@ LineLength:
     - "**/attributes/*.rb"
     - "**/metadata.rb"
 
-StringLiterals:
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
+
+Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
 
 PercentLiteralDelimiters:
